[package]
name = "freactor-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
freactor = {path = "../freactor", features = ["tracing"] }
# freactor = {path = "../freactor", features = [] }
tokio = { version = "1.0", features = ["full"] }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.17"}
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
reqwest = { version = "0.12", features = ["json"] }
env_logger = { version = "0.11" }
axum = { version = "0.7.5" }
