[package]
name = "freactor"
version = "0.1.5"
edition = "2021"
authors = ["Paul Yang <paulyyangyang@gmail.com>"]
description = "A lightweight framework for asynchronous execution flow."
license = "MIT"
repository = "https://github.com/Pro-YY/freactor-rs.git"
homepage = "https://github.com/Pro-YY/freactor-rs"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
tracing = ["dep:tracing"]
runtime-tokio = ["dep:tokio"]
runtime-async-std = ["dep:async-std"]
full = ["tracing", "runtime-tokio", "runtime-async-std"]


[dependencies]
async-std = { version = "1.0", optional = true }
log = { version = "0.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1.0", features = ["time"], optional = true }
tracing = { version = "0.1", optional = true }
